--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,12 +15,14 @@ body{
 
 #app-container{
 	width: 100%;
+	background: url('../images/water (2).jpeg')center center no-repeat fixed;
+	background-size: cover;
 	height: auto;
 	margin-left: auto;
 	margin-right: auto;
 	overflow: hidden;
 	a{
-		color: #FFF;
+		color: #000;
 	}
 }
 
@@ -29,6 +31,7 @@ body{
 	width: 100%;
 	background: url('../images/images (1).jpeg')center center no-repeat fixed;
 	background-size: cover;
+	display: inline-block;
 	h1, p{
 	color: #FFF;
 	font-family: 'Sanchez', 'Baskervilles', serif;
@@ -38,10 +41,11 @@ body{
 
 
 .intro-container{
+
 	color: #FFF;
 }
 .technical-container{
-	background: url('../images/water (2).jpeg') center center no-repeat fixed;
+	background: url('../images/water (2).jpeg')center center no-repeat fixed;
 	background-size: cover;
 	width: 100%;
 	color: #FFF;
@@ -67,15 +71,40 @@ body{
 .education-container{
 	background: url('../images/images (1).jpeg')center center no-repeat fixed;
 	background-size: cover;
+	display: inline-block;
 	width: 100%;
 	color: #FFF;
+	.ironyard, .ict, .ttc{
+		display: inline-block;
+		width: 24.33%;
+		img{
+			width: 50%;
+		}
+	}
 }
+
+
 .experience-container{
 	background: url('../images/water (2).jpeg') center center no-repeat fixed;
 	background-size: cover;
-	width: 100%;
+	display: inline-block;
+	width: auto;
 	color: #FFF;
+		img{
+			width: 30%;
+		}
+		.baesystems{
+			margin: auto;
+		}
+		.spacemaker{
+			margin: auto;
+		}
+		.avery{
+			margin: auto;
+		}
+
 }
+
 .accomplishment-container{
 	background: url('../images/images (1).jpeg')center center no-repeat fixed;
 	background-size: cover;
